# templatefluids

./: .gitignore  CMakeLists.txt  README.md
cmake_tools/: clang_compiler.cmake  gcc_compiler.cmake
cmake_tools/Modules/: clangformat.cmake  clangformat_func.cmake  clangtidy_func.cmake  cppcheck.cmake  gmock.cmake
create_input/: constants.py  createBoundaryDictionary.py  createMask.py  crossings.py  derFlags.py  flagsAndShifts.py  inputCreator.py  maskUtils.py  outputFunctions.py  plotFunctions.py  splineslib.py
fluids/: .clang-format  CMakeLists.txt  docmain.hpp  main.cpp
fluids/boundary/: CMakeLists.txt  boundary.cpp  boundary.hpp  lodi.cpp  lodi.hpp
fluids/boundary/test/: CMakeLists.txt  boundary_test.cpp  sample_inputs.inc
fluids/derivatives/: CMakeLists.txt  derivatives.hpp  derivatives_factory.cpp  derivatives_factory.hpp  irregular_derivatives.cpp  irregular_derivatives.hpp  regular_derivatives.cpp  regular_derivatives.hpp  regular_derivatives_fourth.cpp  regular_derivatives_fourth.hpp
fluids/derivatives/test/: CMakeLists.txt  irregular_derivatives_test.cpp  regular_derivatives_test.cpp  sample_inputs.inc  sample_inputs_irregular.inc
fluids/documentation/: .gitignore  confdoxygen
fluids/grid/: CMakeLists.txt  cartesian_grid.cpp  cartesian_grid.hpp  ghias_grid.cpp  ghias_grid.hpp  ghias_shock_grid.cpp  ghias_shock_grid.hpp  karagiozis_grid.cpp  karagiozis_grid.hpp  shock_grid.cpp  shock_grid.hpp
fluids/grid/test/: CMakeLists.txt  cartesian_grid_test.cpp  cartesian_grid_test_interface.cpp  cartesian_grid_test_interface.hpp  ghias_grid_test.cpp  karagiozis_grid_test.cpp  sample_inputs.inc  sample_inputs_karagiozis.inc  sample_inputs_shock.inc  shock_grid_test.cpp
fluids/input_output/: CMakeLists.txt  base_option.hpp  options.cpp  options.hpp  options_types.hpp  stream_from_file.cpp  stream_from_file.hpp  tokenizer.cpp  tokenizer.hpp
fluids/input_output/readers/: CMakeLists.txt  default_reader.cpp  default_reader.hpp  reader.cpp  reader.hpp
fluids/input_output/test/: CMakeLists.txt  options_test.cpp  tokenizer_test.cpp
fluids/input_output/writers/: CMakeLists.txt  default_writer.cpp  default_writer.hpp  nan_checker.cpp  nan_checker.hpp  vtk_writer.cpp  vtk_writer.hpp  writer.cpp  writer.hpp
fluids/reconstructions/: CMakeLists.txt  abstract_convection.hpp  abstract_dissipation.hpp  convection_factory.cpp  convection_factory.hpp  dissipation_factory.cpp  dissipation_factory.hpp  dissipation_tool.cpp  dissipation_tool.hpp  mix_convection.cpp  mix_convection.hpp  simple_convection.cpp  simple_convection.hpp  simple_dissipation.cpp  simple_dissipation.hpp  simple_flux_convection.cpp  simple_flux_convection.hpp  skew_symmetric.cpp  skew_symmetric.hpp  split_convection.cpp  split_convection.hpp  split_convection_cached.cpp  split_convection_cached.hpp  weno_convection.cpp  weno_convection.hpp  zero_dissipation.cpp  zero_dissipation.hpp
fluids/reconstructions/flux_functions/: CMakeLists.txt  LF_flux.cpp  LF_flux.hpp  flux_factory.cpp  flux_factory.hpp  flux_interface.hpp  simple_flux.cpp  simple_flux.hpp  steger_warming_flux.cpp  steger_warming_flux.hpp
fluids/reconstructions/flux_functions/test/: CMakeLists.txt  flux_functions_test.cpp
fluids/time_integrators/: CMakeLists.txt  euler_integrator.hpp  runge_kutta_integrator.hpp  solver.cpp  solver.hpp  time_integrator_tool.cpp  time_integrator_tool.hpp  time_integrator_tool_factory.cpp  time_integrator_tool_factory.hpp  time_integrator_types.hpp
fluids/time_integrators/test/: CMakeLists.txt  time_integrator_test.cpp
fluids/utils/: CMakeLists.txt  body_discontinuity_def.hpp  boundary_point_def.hpp  debug_def.hpp  flag_handler.cpp  flag_handler.hpp  flux_def.hpp  generic_discontinuity_def.hpp  ghias_ghost_point_def.hpp  global_vars.cpp  global_vars.hpp  grid_components_container_def.hpp  grid_constants_container_def.hpp  operators_overloads.cpp  operators_overloads.hpp  point_def.hpp  point_functions.cpp  point_functions.hpp  shock_discontinuity_def.hpp  shock_discontinuity_handler.cpp  shock_discontinuity_handler.hpp  useful_alias.cpp  useful_alias.hpp
fluids/utils/filters/: CMakeLists.txt  minimal_filter.hpp  minimal_filter_3_moments.cpp  minimal_filter_3_moments.hpp  minimal_filter_factory.cpp  minimal_filter_factory.hpp
fluids/utils/shock_detectors/: CMakeLists.txt  luisa_detector_23.cpp  luisa_detector_23.hpp  luisa_detector_345.cpp  luisa_detector_345.hpp  luisa_detector_factory.cpp  luisa_detector_factory.hpp  luisa_shock_detector.hpp
fluids/utils/shock_detectors/test/: CMakeLists.txt  input_sample.inc  luisa_detector_test.cpp
fluids/utils/test/: CMakeLists.txt  flag_handler_test.cpp  point_functions_test.cpp  shock_discontinuity_test.cpp
new_create_input/: body_def.py  boundary_def.py  crossings.py  default_values.py  geometry.py  ghias_generator.py  input_utils.py  reader.py  setup_simulation.py
